<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_mylist"
        android:tint="#FFFFFF"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/action_mylist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:tint="#FFFFFF"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:tint="#FFFFFF"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
